# agent-horizon

./: .gitignore  LICENSE  README.md  horizon.json  pyproject.toml  requirements.txt
interface/web/: app.py
scripts/: seed_example_data.py
src/core/: state.py
